--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "db": "npx json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/vue-fontawesome": "^3.1.1",
+    "@splidejs/vue-splide": "^0.6.12",
+    "apexcharts": "^5.3.2",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "db": "^6.0.3",
+    "lucide-vue-next": "^0.535.0",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
