--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "db": "^6.0.3",
+    "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.535.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
